--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
-SEOTitle: 
+title: florr.io
+SEOTitle: florr.io
 header-img: img/post-bg-desk.jpg
 email: klovien@gmail.com
-description: 
-keyword: 
+description: "florr.io"
+keyword: "florr.io"
 url: ""          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "" # you code repository
