--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: klovien@gmail.com
 description: "florr.io"
 keyword: "florr.io"
-url: ""          # your host, for absolute URL
+url: "https://florrio.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "" # you code repository
 
